refactor_batch : 가상스레드 통계, 정산 작업 기능 확인, 성능개선 확인